// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ViewRecord  should render a DOI link 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <DoiLink
              DoiId="10.1016/j.pnsc.2012.12.004"
            />
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
          />
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - Open Access - Free to read"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component ViewRecord  should render a PubMed Central link 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <PubmedCentralLink
              pubmedCentralId="PMC5179926"
            />
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
          >
            Full text from PubMed Central
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - DOI - Free to read"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component ViewRecord  should render empty div 1`] = `
<div
  className="empty"
/>
`;

exports[`Component ViewRecord  should render list of links with OA icons 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisatest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Link to publication"
            >
              http://www.thisisatest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
          >
            Link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - DOI - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="1"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisanothertest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Another link to publication"
            >
              http://www.thisisanothertest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
          >
            Another link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - DOI - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="2"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.nodescription.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Click to open link in a new window"
            >
              http://www.nodescription.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
          >
            No description available
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - DOI - Free to read"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component ViewRecord  should render list of links with OA icons due to no embargo days 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisatest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Link to publication"
            >
              http://www.thisisatest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
          >
            Link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - DOI - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="1"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisanothertest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Another link to publication"
            >
              http://www.thisisanothertest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
          >
            Another link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - DOI - Free to read"
            />
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="2"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.nodescription.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Click to open link in a new window"
            >
              http://www.nodescription.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
          >
            No description available
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div
              className="fez-icon openAccess large"
              title="Open Access - DOI - Free to read"
            />
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;

exports[`Component ViewRecord  should render list of links with no OA icons due to no embargo date in the future 1`] = `
<StandardCard
  className=""
  title="Links"
>
  <div
    className="viewRecordLinks"
  >
    <Table
      allRowsSelected={false}
      className="links"
      fixedFooter={true}
      fixedHeader={true}
      height="inherit"
      multiSelectable={false}
      selectable={false}
    >
      <TableHeader
        adjustForCheckbox={false}
        className="tableHeader"
        displaySelectAll={false}
        enableSelectAll={true}
        selectAllSelected={false}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          selectable={true}
          striped={false}
        >
          <TableHeaderColumn
            className="rowLink"
          >
            Link (will open in a new window)
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowDescription is-hidden-mobile"
          >
            Description
          </TableHeaderColumn>
          <TableHeaderColumn
            className="rowOA align-right"
          >
             
          </TableHeaderColumn>
        </TableRow>
      </TableHeader>
      <TableBody
        allRowsSelected={false}
        className="tableData"
        deselectOnClickaway={true}
        displayRowCheckbox={false}
        multiSelectable={false}
        preScanRows={true}
        selectable={true}
        style={Object {}}
      >
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="0"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisatest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Link to publication"
            >
              http://www.thisisatest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
          >
            Link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div>
              <span
                className="is-hidden-mobile is-hidden-tablet-only"
              >
                Embargoed until 24th December 2020 
              </span>
              <div
                className="fez-icon openAccessLocked large"
                title="Open Access - DOI - Embargoed until 24th December 2020"
              />
            </div>
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="1"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.thisisanothertest.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Another link to publication"
            >
              http://www.thisisanothertest.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
          >
            Another link to publication
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div>
              <span
                className="is-hidden-mobile is-hidden-tablet-only"
              >
                Embargoed until 24th December 2020 
              </span>
              <div
                className="fez-icon openAccessLocked large"
                title="Open Access - DOI - Embargoed until 24th December 2020"
              />
            </div>
          </TableRowColumn>
        </TableRow>
        <TableRow
          displayBorder={true}
          hoverable={false}
          hovered={false}
          key="2"
          selectable={true}
          striped={false}
        >
          <TableRowColumn
            className="rowLink"
            hoverable={false}
          >
            <ExternalLink
              className="externalLink"
              href="http://www.nodescription.com"
              openInNewIcon={true}
              rel="noopener noreferrer"
              target="_blank"
              title="Click to open link in a new window"
            >
              http://www.nodescription.com
            </ExternalLink>
          </TableRowColumn>
          <TableRowColumn
            className="rowDescription is-hidden-mobile"
            hoverable={false}
          >
            No description available
          </TableRowColumn>
          <TableRowColumn
            className="rowOA align-right"
            hoverable={false}
          >
            <div>
              <span
                className="is-hidden-mobile is-hidden-tablet-only"
              >
                Embargoed until 24th December 2020 
              </span>
              <div
                className="fez-icon openAccessLocked large"
                title="Open Access - DOI - Embargoed until 24th December 2020"
              />
            </div>
          </TableRowColumn>
        </TableRow>
      </TableBody>
    </Table>
  </div>
</StandardCard>
`;
